# ai-screening-assistant

./: .gitignore  .swiftlint.yml  AGENTS.md  CLAUDE.md  ExportOptions.plist  README.md  mise.toml  opencode.json
.opencode/agents/: screening-ios-architect.md  screening-server-architect.md  screening-test-architect.md
apps/shared/: Package.swift
clients/ai-screening-assistant/: PROJECT.md  implementation_plan.md  task.md  walkthrough.md
development/: docker-compose.api.yml  docker-compose.llm.yml  docker-compose.observability.yml  docker-compose.yml
development/loki/: loki-config.yaml
development/otel-collector/: otel-collector-config.yaml
development/prometheus/: prometheus.yml
docs/: MANIFEST.md  README.md  RUNBOOK.md
hooks/: mise_env.lua
services/ai-server/: .dockerignore  Dockerfile  pyproject.toml
services/ai-server/configs/: config.development.toml  config.developmnt-ollama.toml  config.test.toml  config.toml
services/ai-server/src/ai_server/: circuit_breaker.py  config.py  health_server.py  local_only.py  logging.py  main.py  metrics.py  otel.py  router.py  schemas.py
services/ai-server/src/ai_server/providers/: __init__.py  base.py  bedrock.py  factory.py  mantle.py  ollama.py  zen.py
services/ai-server/tests/: conftest.py  test_circuit_breaker.py  test_config.py  test_health_server.py  test_local_only.py  test_logging.py  test_main.py  test_metrics.py  test_otel.py  test_providers.py  test_router.py  test_schemas.py
services/ai-server/tests/e2e/: conftest.py  test_e2e.py
tooling/: bedrock-img.py  bedrock-pdf.py  vulkan.sh
(+44 files in other folders)
